Finished the course #1

--- a/index.html
+++ b/index.html
@@ -311,6 +311,38 @@
 					<section>
 						<img class="nobg" src="images/example_2_rerere.png">
 					</section>
+					<section>
+						<p>We correct the conflict:</p>
+						<p><em>bonjour ninjas!</em></p>
+					</section>
+					<section>
+						<img class="nobg" src="images/example_3_rerere.png">
+					</section>
+					<section>
+						<p>We add the modification and commit. The resolution was recorded</p>
+						<img class="nobg" src="images/example_4_rerere.png">
+					</section>
+					<section>
+						<p>A folder was created in .git (rr-cache) which contains a folder corresponding to the resolution with a file containing the conflict (preimage) and a file containing the resolution (postimage)</p>
+						<img class="nobg" src="images/example_5_rerere.png">
+					</section>
+					<section>
+						<p>Suppose we want to a rebase instead of merging</p>
+						<img class="nobg" src="images/example_6_rerere.png">
+					</section>
+					<section>
+						<p>The conflict was automatically resolved !</p>
+						<img class="nobg" src="images/example_7_rerere.png">
+					</section>
+					<section>
+						<p>If the resolution doesn't satisfy</p>
+						<img class="nobg" src="images/example_8_rerere.png">
+					</section>
+				</section>
+				<section>
+					<section data-background-image="gif/question.gif">
+						<h3>Questions ?</h3>
+					</section>
 				</section>
 			</div>
 		</div>
