--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 						<img class="nobg" src="images/example_4_grep.png">
 					</section>
 					<section>
-						<p>Searching with the word "Roses" AND "red"</p>
+						<p>Searching with the words "Roses" AND "red"</p>
 						<img class="nobg" src="images/example_5_grep.png">
 						<img class="nobg" src="images/example_6_grep.png">
 					</section>
@@ -327,7 +327,7 @@
 						<img class="nobg" src="images/example_5_rerere.png">
 					</section>
 					<section>
-						<p>Suppose we want to a rebase instead of merging</p>
+						<p>Suppose we want to rebase instead of merge</p>
 						<img class="nobg" src="images/example_6_rerere.png">
 					</section>
 					<section>
