Remove useless files

--- a/index.html
+++ b/index.html
@@ -4,22 +4,13 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Git Advanced Course #1</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
-
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
 	</head>
 	<body>
 		<div class="reveal">
@@ -286,7 +277,7 @@
 						<h3>Rerere</h3>
 					</section>
 					<section>
-						<p>Rerere (reuse recorded resolution) avoid to resolve a repetitive conflict. Git will remember how the conflict was solved and to solve it automatically in the future</p>
+						<p>Rerere (reuse recorded resolution) permits to resolve a repetitive conflict. Git will remember how the conflict was solved and to solve it automatically in the future</p>
 						<img class="nobg" src="images/command_rerere.png">
 					</section>
 					<section>
@@ -295,12 +286,10 @@
 						<p><em>hello ninjas</em></p>
 					</section>
 					<section>
-						<h3>Example</h3>
 						<p>We create a branch called "french" with modification of hello.txt:</p>
 						<p><em>bonjour ninjas</em></p>
 					</section>
 					<section>
-						<h3>Example</h3>
 						<p>But in master, there is also a modification:</p>
 						<p><em>hello ninjas!</em></p>
 					</section>
